style/about.css
body {
    background-color: black;
    color: white;
    font-family:'Times New Roman', Times, serif;
}

.aboutmemsg_div {
    width: 70%;
    height: 8%;
    margin-right: 15%;
    margin-left: 15%;
    padding: 1%;
    margin-top: 2%;
    text-align: center;
    background-color: black; 
    box-shadow: 0px 0px 15px 1px white;
    transition: box-shadow 0.3s, transform 0.3s; 
    animation: fadeInText 5s ease forwards;
    border-radius: 15px;
    border: 4px solid black;
    cursor: pointer;
    flex: 1;
}   
.aboutmemsg_div.white-shadow {
    box-shadow: 5px 5px 15px 2px white;
}
.aboutmemsg_div.black-shadow {
    box-shadow: 3px 3px 5px 6px black;
}
.aboutmemsg_div.black-shadow:hover {
    box-shadow: 6px 8px 7px 1px black;
    transform: translate(-5px);
}
.aboutmsg_div.white-shadow:hover {
    box-shadow: 6px 8px 7px 1px white;
    transform: translate(-5px);
}
.aboutmemsg_div:hover {
    box-shadow: 6px 8px 7px 1px white;
    transform: translate(-5px);
}
.aboutme_msg {
    font-size: 100%;
    font-weight: bold;
}

/* ******************************Skills tab window************************************ */
.skills_tab {
    width: 210px;
    height: 40px;
    color: white;
    position: absolute;
    align-items: center;
    margin-left: 10px;
    display: flex;
    padding: 10px;
    left: 50%;
    transform: translate(-50%, -50%);
    z-index: 1;
    text-align: center;
    border: 3px solid black;
    border-radius: 30px;
    background-color: black;
    box-shadow: 0 0 8px 1.5px lightgray;
    cursor: pointer;
    transition: transform .5s ease;
    animation: fadeInText 10s ease forwards, floating 2s infinite alternate;
}
@media screen and (max-width: 480px) {
    .skills_tab {
        top: 370px;
    }
}
@media screen and (min-width: 481px) {
    .skills_tab {
        top: 38%;
    }
}
@keyframes fadeInText {
    0% {
        opacity: 0;
    }
    100% {
        opacity: 1;
    }
}
@keyframes floating {
    0% {
        transform: translate(-50%, -50%) translateY(0);
    }
    100% {
        transform: translate(-50%, -50%) translateY(-10px);
    }
}
.skills_tab:hover {
    transform: translate(-50%, -50%) rotate(360deg); 
    box-shadow: 2px 2px 5px 2px lightgray;
}

.footer {
    position: absolute;
    bottom: 0;
    width: 100%;
    color: white;
    text-align: center;
    padding: 20px 0; 
    z-index: 999; 
}

/*  *********************** Tech skills main container *********************** */
.skills_container {
    background-color: black;
    width: 90%;
    margin-bottom: 5%;
    margin-left: auto;
    margin-right: auto;
    padding: 20px;
    border-radius: 15px;
    border: 3px solid black;
    box-shadow: 0 0 15px 5px rgba(255, 255, 255, 0.5); 
    transition: box-shadow 0.3s, transform 0.3s; 
    flex-wrap: wrap; 
    align-items: center;
    animation: fadeInText 5s ease forwards;
    gap: 10px; 
    z-index: 1;
}
@media screen and (max-width: 480px) {
    .skills_container {
        margin-top: 170px;
        height: auto;
    }
}
@media screen and (min-width: 481px) {
    .skills_container {
        margin-top: 9%;
    }
}

.skills {
    background-color: black;
    text-align: center;
    padding: 10px;
    margin: 5px auto;
    border-radius: 5px;
    width: 200px;
    height: 200px;
    word-wrap: break-word;
    display: inline-block;
    overflow: hidden; 
    position: relative; 
}

.skills img {
    border-radius: 50%;
    animation: float 5s infinite alternate; 
    box-shadow: 1px 5px 8px 1px white;
    width: 50px;
    height: 50px;
}

.skills:hover img {
    transform: rotate(360deg); 
    box-shadow: 2px 4px 3px 1px white;
    transform: translate(-5px);
}

.img_logo {
    width: 50px;
    height: 50px;
}
@keyframes float {
    0% {
        transform: translate(0px, 0px);
    }
    50% {
        transform: translate(10px, 10px); 
    }
    100% {
        transform: translate(0px, 0px);
    }
}

/*  *********************** Tech skills divs *********************** */
.skillContainer_child {
    background-color: black;
    text-align: center;
    padding: 10px;
    margin: 5px;
    border-radius: 5px;
    width: 200px;
    height: 250px;
    border: 2px solid white;
    word-wrap: break-word;
    display: inline-block;
    overflow: hidden; 
    align-items: center;
    position: relative;
    cursor: pointer;
    z-index: 1;
}
.skillContainer_child:hover {
    border-color: lightslategray;
}
.skillContainer_child img {
    border-radius: 50%;
    animation: float 5s infinite alternate; 
    transition: transform 0.3s ease-in-out;
    box-shadow: 1px 5px 8px 1px white;
    background-color: black;
    width: 50px;
    height: 50px;
}
.skillContainer_child:hover img {
    transform: rotate(360deg); 
    box-shadow: 2px 4px 3px 1px lightslategray;
    transform: translate(-5px);
}

/*  *********************** Bullet point text *********************** */
.bulletPoint_text {
    top: 2px;
    margin-left: -10px;
}

/*  *********************** Bullet point colors *********************** */
.green_bullet {
    list-style-type: none;
    position: relative;
    padding-left: 0;
}
.green_bullet li {
    position: relative;
    padding-left: 20px;
    line-height: 1.5;
    margin-bottom: 20px;
}
.green_bullet::before {
    content: "•";
    color: rgb(3, 250, 3);
    font-size: 30px;
    position: absolute;
    left: 0;
    top: -5px;
}

.white_bullet {
    list-style-type: none;
    position: relative;
}
.white_bullet::before {
    content: "•";
    color: white;
    font-size: 26px;
    position: absolute;
    left: 0;
    top: -5px;
}

.red_bullet {
    list-style-type: none;
    position: relative;
}
.red_bullet::before {
    content: "•";
    color: red;
    font-size: 30px;
    position: absolute;
    left: 0;
    top: -5px;
}

.yellow_bullet {
    list-style-type: none;
    position: relative;
}
.yellow_bullet::before {
    content: "•";
    color: yellow;
    font-size: 30px;
    position: absolute;
    left: 0;
    top: -5px;
}

/*  *********************** Bullet point colors *********************** */
.skill_name {
    margin-bottom: 5px;
    font-size: 20px;
}

/*  *********************** Tool-tip *********************** */
.toolTip {
    visibility: hidden; /* Hidden by default */
    width: 150px;
    background-color: black;
    border: 2px solid white;
    color: white;
    text-align: center;
    border-radius: 6px;
    padding: 8px;
    position: absolute;
    z-index: 1;
    bottom: 125%; /* Position it above the list item */
    left: 50%;
    transform: translateX(-50%);
    opacity: 0;
    transition: opacity 0.3s;
}

.toolTip::after {
    content: "";
    position: absolute;
    top: 100%; 
    left: 50%;
    margin-left: -5px;
    border-width: 5px;
    border-style: solid;
    border-color: black transparent transparent transparent;
}

.green_bullet li:hover .toolTip {
    visibility: visible;
    opacity: 1;
}

.white_bullet li:hover .toolTip {
    visibility: visible;
    opacity: 1;
}

.red_bullet li:hover .toolTip {
    visibility: visible;
    opacity: 1;
}


.yellow_bullet li:hover .toolTip {
    visibility: visible;
    opacity: 1;
}

/*  *********************** Arrows *********************** */
.upArrow {
    width: 30px;
    height: 30px;
    margin-left: 10px;
    vertical-align: middle;
}
.downArrow {
    width: 30px;
    height: 30px;
    margin-left: 10px;
    vertical-align: middle;
}

/*  *********************** Containers Wrapper *********************** */
.containers_wrapper {
    display: flex;
    justify-content: space-around;
    flex-wrap: wrap;
    margin: 0 auto;
    width: 100%;
    padding: 10px;
    flex-direction: row; 
}
@media screen and (max-width: 480px) {
    .containers_wrapper {
        flex-direction: column; 
        margin-top: -60px;
        height: auto;
    }
}
@media screen and (min-width: 481px) {
    .containers_wrapper {
        flex-direction: row; 
        margin-top: 0;
    }
}


/*  *********************** Soft Skills Container*********************** */
.softSkills_container {
    background-color: black;
    width: 30%;
    height: 200px;
    padding: 20px;
    border-radius: 15px;
    margin-left: auto;
    margin-right: auto;
    box-shadow: 0 0 15px 5px rgba(255, 255, 255, 0.5); 
    transition: box-shadow 0.3s, transform 0.3s;
    display: flex; 
    flex-wrap: wrap; 
    justify-content: center;
    align-items: center;
    animation: fadeInText 5s ease forwards;
    gap: 10px; 
    z-index: 1;
}

@media screen and (max-width: 480px) {
    .softSkills_container {
        flex-direction: column; 
        width: 90%; 
        height: auto; 
    }
}

@media screen and (min-width: 481px) {
    .softSkills_container {
        flex-direction: row; 
    }
}


/*  *********************** Coursework container *********************** */
.coursework_container {
    background-color: black;
    width: 30%;
    height: 200px;
    padding: 20px;
    border-radius: 15px;
    margin-left: auto;
    margin-right: auto;
    box-shadow: 0 0 15px 5px rgba(255, 255, 255, 0.5); 
    transition: box-shadow 0.3s, transform 0.3s;
    display: flex; 
    flex-wrap: wrap; 
    align-items: center;
    animation: fadeInText 5s ease forwards;
    gap: 10px; 
    z-index: 1;
}

/*  *********************** Tab Wrapper *********************** */
.tab_wrapper {
    display: flex;
    justify-content: space-around; 
    flex-wrap: wrap; 
    width: 100%; 
    padding: 10px;
}
@media screen and (max-width: 480px) {
    .tab_wrapper {
        margin-top: 40%;
        margin-left: 18%;
        height: auto;
    }
}
@media screen and (min-width: 481px) {
    .tab_wrapper {
        margin-top: 15%;
        margin-left: 8%;
    }
}

/*  *********************** Soft Skills Tab *********************** */
.softSkills_tab {
    padding: 10px;
    transform: translate(-50%, -50%);
    z-index: 1;
    text-align: center;
    align-items: center;
    justify-content: center;
    border: 2px solid white;
    border-radius: 30px;
    background-color: black;
    box-shadow: 0 0 8px 1.5px lightgray;
    cursor: pointer;
    transition: transform .5s ease;
    animation: fadeInText 10s ease forwards, floating 2s infinite alternate;
}
@media screen and (max-width: 480px) {
    .softSkills_tab {
        font-size: 20px;
        width: 130px;
        height: 55px;
    }
}
@media screen and (min-width: 481px) {
    .softSkills_tab {
        width: 270px;
        height: 40px;
    }
}
@keyframes fadeInText {
    0% {
        opacity: 0;
    }
    100% {
        opacity: 1;
    }
}
@keyframes floating {
    0% {
        transform: translate(-50%, -50%) translateY(0);
    }
    100% {
        transform: translate(-50%, -50%) translateY(-10px);
    }
}
.softSkills_tab:hover {
    transform: translate(-50%, -50%) rotate(360deg); 
    box-shadow: 2px 2px 5px 2px lightgray;
}

/*  *********************** Coursework Tab *********************** */
.coursework_tab {
    padding: 10px;
    transform: translate(-50%, -50%);
    z-index: 1;
    text-align: center;
    border: 2px solid white;
    border-radius: 30px;
    background-color: black;
    box-shadow: 0 0 8px 1.5px lightgray;
    cursor: pointer;
    transition: transform .5s ease;
    animation: fadeInText 10s ease forwards, floating 2s infinite alternate;
}
@media screen and (max-width: 480px) {
    .coursework_tab {
        width: 130px;
        height: 55px;
        font-size: 20px;
    }
}
@media screen and (min-width: 481px) {
    .coursework_tab {
        width: 270px;
        height: 40px;
    }
}
@keyframes fadeInText {
    0% {
        opacity: 0;
    }
    100% {
        opacity: 1;
    }
}
@keyframes floating {
    0% {
        transform: translate(-50%, -50%) translateY(0);
    }
    100% {
        transform: translate(-50%, -50%) translateY(-10px);
    }
}
.coursework_tab:hover {
    transform: translate(-50%, -50%) rotate(360deg); 
    box-shadow: 2px 2px 5px 2px lightgray;
}

